Fixed one singular toolip that kept aligning to the right

--- a/src/app/components/Blocks/analysis-graph-button/analysis-graph-button.component.scss
+++ b/src/app/components/Blocks/analysis-graph-button/analysis-graph-button.component.scss
@@ -25,6 +25,7 @@
 .label-container {
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 .label-help {
   color: #3f51b5;
